apps/smart-home/zigbee2mqtt/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: zigbee2mqtt
  namespace: zigbee2mqtt
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-production"
    kubernetes.io/ingress.class: internal
spec:
  tls:
    - hosts:
        - zigbee2mqtt.private.channings.me
      secretName: zigbee2mqtt-tls
  rules:
    - host: zigbee2mqtt.private.channings.me
      http:
        paths:
          - path: /
            backend:
              service:
                name: zigbee2mqtt
                port:
                  name: http
